Fix background color and z-index for container elements

--- a/style.css
+++ b/style.css
@@ -37,5 +37,21 @@
     width: 180px;
     height: 180px;
     position: absolute;
-    background: #f;
+    background: #f41b75;
+    border-radius: 5px;
+    left: -50px;
+    top: -50px;
+    z-index: -1;
+}
+
+.container::after{
+    content: '';
+    width: 180px;
+    height: 180px;
+    position: absolute;
+    background: #419aff;
+    border-radius: 50%;
+    right: -30px;
+    bottom: -50px;
+    z-index: -1;
 }
